style.css
@font-face {
    font-family: 'PragRoman';
    src: url('./fonts/PragRoman.eot');
    src: url('./fonts/PragRoman.eot?#iefix') format('embedded-opentype'),
        url('./fonts/PragRoman.woff') format('woff'),
        url('./fonts/PragRoman.svg#PragRoman') format('svg');
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

:root {
    --the-green: #002A26;
}

* {
    font-family: 'PragRoman';
    margin: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--the-green);
    box-sizing: content-box;
}

.header {
    height: auto;
    position: sticky;
    top: 0;
}

.search-wrapper {
    background-color: #061E1C;
    padding: 8px 5px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

#search {
    border: none;
    background-color: #E1C79F;
    width: 80%;
    height: 30px;
    padding-left: 3.3px;
    border-radius: 3px 0 0 3px;
}

#filters {
    background-color: #00786C;
    border: none;
    height: 30px;
    border-radius: 0 3px 3px 0;
}

.island-wrapper {
    height: 85vh;
    overflow-y: scroll;
}

.island-list {
    list-style: none;
    width: 100%;
    padding: 0 10px;
}

.island {
    width: 100%;
    border-radius: 15px;
    display: flex;
    padding: 10px 10px;
    align-items: center;
    background-color: #BABABA;
    margin: 8px 0;
}

.island-img {
    width: 100px;
    height: 100px;
    border-radius: 10px;
}

.info-wrapper {
    align-self: flex-start;
    padding-left: 8px;
    width: 100%;
    
}

.title-wrapper {
    display: flex;
    align-items: center;
    margin-bottom: 10px;
}

.island-name {
    padding-right: 7px;
    font-size: 1em;
    width: 100%;
}

.island-coor {
    color: #9b130c;
    width: min-content;
    text-align: right;
}

.details {
    list-style: none;
    padding-left: 15px;
    font-size: 0.9em;
}

#placeholder {
    display: none;
}

.show_off {
    display: none;
}

.region_selected {
    background-color: #002A26 !important;
}

